<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_layout0"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_hair"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in to continue.."
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <ProgressBar
        android:id="@+id/login_progressbar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_input_outline"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/border_input_outline"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="10dp" />


        <LinearLayout
            android:id="@+id/login_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="30dp">

            <Button
                android:id="@+id/login_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:gravity="left"
                android:text="@string/login_text"
                android:textColor="#b3f5de"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_create_acct_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center_horizontal"
                android:text="@string/create_account_text"
                android:textColor="#b3f5de"
                android:textStyle="bold" />

            <Button
                android:id="@+id/login_guest_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginTop="16dp"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:text="@string/guest_login_text"
                android:textColor="#b3f5de"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>